--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rxsavings_coding_challenge",
   "version": "1.0.0",
-  "description": "RxSavings Coding Challenge",
+  "description": "Node.js Rest API with Express.js and MySQL",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
